# LH

./: .gitignore
LH/: .gitignore  CMakeLists.txt  PATCH_NOTE_RECENT_PROJECT_EXPLORER.txt  README.md  STM32F103_MODBUS_ADAPTATION_CHECKLIST.md  build.bat  dsl_completion_report.txt  monitor_processor_report.txt  run_platform.bat  snippet_report.txt  tools_generate_snippets_from_compiler.py
LH/config/: download_config.json  download_profile.json
LH/docs/: F2812_BRIDGE_INTEGRATION.md  development_workflow.md  monitor_integration_summary.md
LH/examples/: communication_test.cpp  communication_verify.cpp  download_profile_f2812_bridge_mvp.json  monitor_test_demo.cpp  project_snippets_example.json
LH/include/: Common.h  TextEncoding.h
LH/resources/: resources.qrc
LH/resources/snippets/: default_snippets.json
LH/src/: main.cpp
LH/src/common/: ConfigTypes.h  RuntimePointTable.h  RuntimePointTypes.h
LH/src/communication/: CANCommon.cpp  CANCommon.h  CANInterface.cpp  CANInterface.h  CANOpenInterface.cpp  CANOpenInterface.h  CMakeLists.txt  ClassicOpcServer.cpp  ClassicOpcServer.h  CommFactory.cpp  CommFactory.h  CommTypes.h  Common.h  Communication.h  ControllerBridge.cpp  ControllerBridge.h  DownloadManager.cpp  DownloadManager.h  DownloadProfile.cpp  DownloadProfile.h  EthernetInterface.cpp  EthernetInterface.h  ICommInterface.h  IDeviceBackend.h  IDownloadTransport.h  IOpcServer.h  J1939Interface.cpp  J1939Interface.h  ModbusInterface.cpp  ModbusInterface.h  OpcServerFactory.cpp  OpcServerFactory.h  ProtocolDetector.cpp  ProtocolDetector.h  README.md  SerialInterface.cpp  SerialInterface.h  VirtualDeviceBackend.cpp  VirtualDeviceBackend.h
LH/src/compiler/: CMakeLists.txt  DSLCompilerInterface.cpp  DSLCompilerInterface.cpp.backup  DSLCompilerInterface.h  dummy.cpp
LH/src/core/: CMakeLists.txt  DataManager.cpp  DataManager.h  TaskScheduler.cpp  TaskScheduler.h
LH/src/core/tests/: DataManagerTest.cpp  DataManagerTest.h  TaskSchedulerTest.cpp  TaskSchedulerTest.h
LH/src/designer/: BuildController.cpp  BuildController.h  CMakeLists.txt  DownloadDockWidget.cpp  DownloadDockWidget.h  DslCompletionEngine.cpp  DslCompletionEngine.h  DslDragDropHandler.cpp  DslDragDropHandler.h  DslScriptEditor.cpp  DslScriptEditor.h  DslSyntaxHighlighter.cpp  DslSyntaxHighlighter.h  MainWindow.cpp  MainWindow.cpp.corrupt_backup  MainWindow.h  MonitorController.cpp  MonitorController.h  OpcServerSettingsDialog.cpp  OpcServerSettingsDialog.h  OutputPaneController.cpp  OutputPaneController.h  ParameterController.cpp  ParameterController.h  ParameterTuningWindow.cpp  ParameterTuningWindow.h  ProgramBlocksWidget.cpp  ProgramBlocksWidget.h  ProjectController.cpp  ProjectController.h  ProjectExplorerWidget.cpp  ProjectExplorerWidget.h  RunController.cpp  RunController.h  RuntimeSessionController.cpp  RuntimeSessionController.h  SettingsController.cpp  SettingsController.h  SettingsDialog.cpp  SettingsDialog.h  (+2 more)
LH/src/designer/ui/: GlobalStatusBar.cpp  GlobalStatusBar.h  InspectorPanel.cpp  InspectorPanel.h  ProblemsPanel.cpp  ProblemsPanel.h  StatusTextHelper.h  ThemeManager.cpp  ThemeManager.h
LH/src/diagnostics/: DiagnosticSnapshotService.cpp  DiagnosticSnapshotService.h
LH/src/monitor/: CMakeLists.txt  ChartWidget.cpp  ChartWidget.h  MonitorChannel.cpp  MonitorChannel.h  MonitorChartView.cpp  MonitorChartView.h  MonitorDataLogger.cpp  MonitorDataLogger.h  MonitorDataProcessor.cpp  MonitorDataProcessor.h  MonitorExportHelper.cpp  MonitorExportHelper.h  MonitorManager.cpp  MonitorManager.h  MonitorTypes.h  MonitorWidget.cpp  MonitorWidget.h  README_REFACTOR.md  RingBuffer.h  SampleDataProvider.cpp  SampleDataProvider.h
LH/tests/: CMakeLists.txt  data_manager_test.cpp  dsl_completion_engine_test.cpp  dsl_legacy_compile_probe.cpp  dsl_script_editor_save_test.cpp  dummy_test.cpp  main_window_integration_test.cpp  monitor_data_processor_test.cpp  monitor_export_test.cpp  monitor_manager_backend_test.cpp  monitor_test.cpp  parameter_controller_test.cpp  project_controller_stub.cpp  protocol_detector_test.cpp  runtime_point_table_test.cpp  runtime_session_controller_test.cpp  snippet_repository_test.cpp  task_scheduler_test.cpp  virtual_device_backend_test.cpp
LH/tools/: workflow_dev.bat  workflow_dev.ps1
